--- a/unpacking.html
+++ b/unpacking.html
@@ -24,7 +24,7 @@
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="unpackingstyle.css" />
+    <link rel="stylesheet" type="text/css" href="/Game-Arcade/unpackingstyle.css" />
     <title>Unpacking Guide</title>
     <link rel="icon" type="image/x-icon" href="img/imrs2.gif" />
   </head>
