Update and rename homepage.html to index.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
 
         <div class="gamecard" id="Jiayi">
-          <a href="Jiayi/unpacking.html">
+          <a href="unpacking.html">
             <img
               class="gameimg"
               src="Homepage image_Jiayi.png"
