--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
         <div class="gamecard" id="KangSan">
           <img
             class="gameimg"
-            src="KangSan game image"
-            alt="KangSan game image"
+            src="Homepage image_KS.jpg"
+            alt="Uno Logo Image"
           />
           <h3>KangSan game name</h3>
         </div>
