--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             src="Homepage image_KS.jpg"
             alt="Uno Logo Image"
           />
-          <h3>KangSan game name</h3>
+          <h3>Uno</h3>
         </div>
 
         <div class="gamecard" id="Seojeong">
