--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
         </div>
 
         <div class="gamecard" id="Seojeong">
+          <a href="halligalli.html">
           <img
             class="gameimg"
             src="Homepage image_SJ.png"
