--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Halli Galli</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="homepage/styles.css">
 </head>
 
 <body>
