--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href='Demo css.css'/>
+    <link rel="stylesheet" href='demo.css'/>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Demo Halli Galli</title>
 </head>
 <body>
-
+    <header>
+        <nav>
+          <ul>
+            <li><a href="../index.html">Halli Galli</a></li>
+            <li><a href="../instructions">Game Instructions</a></li>
+            <li><a href="../quiz/quiz.html">Quiz Yourself</a></li>
+            <li><a href="../demo/demo.html">Demo Game</a></li>
+          </ul>
+        </nav>
+      </header>
 
     <main>
         <!--Section for instruction of demo game--> 
