--- a/index.html
+++ b/index.html
@@ -1,61 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halli Galli</title>
-    <link rel="stylesheet" href="homepage/styles.css">
-</head>
+    <link rel="stylesheet" href="homepage/styles.css" />
+  </head>
 
-<body>
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Halli Galli</a></li>
-                <li><a href="#instructions">Game Instructions</a></li>
-                <li><a href="#quiz">Quiz Yourself</a></li>
-                <li><a href="#demo">Demo Game</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul>
+          <li><a href="index.html">Halli Galli</a></li>
+          <li><a href="#instructions">Game Instructions</a></li>
+          <li><a href="quiz/quiz.html">Quiz Yourself</a></li>
+          <li><a href="demo/demo.html">Demo Game</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <section id="home">
-            <div class="content">
-                <div class="text-block">
-                    <h1>BRIEF GAME DESCRIPTION</h1><br><br>
-                    <ul>
-                        <li>Each player turns over a card in the order of play.</li>
-                        <li>Soon as the revealed cards show exactly 5 fruits of the same sort, the first player to ring
-                            the bell wins all of the revealed cards.</li>
-                        <li>The aim of the game is to win the largest number of cards.</li>
-                    </ul>
-                </div>
-                <img src="HalliGalli.png" alt="Picture of Halli Galli Logo">
-            </div>
-        </section>
-        <section id="instructions">
-            <div class="content with-image">
-                <div class="button"><a href="#">Game Instruction</a></div>
-                <img src="Strawberry.gif" alt="Game Instruction Image">
-            </div>
-        </section>
-        <section id="quiz">
-            <div class="content with-image">
-                <img src="Banana.gif" alt="Quiz Image">
-                <div class="button"><a href="#">Quiz Yourself</a></div>
-            </div>
-        </section>
-        <section id="demo">
-            <div class="content with-image">
-                <div class="button"><a href="#">Demo Game</a></div>
-                <img src="Pinapple.gif" alt="Demo Game Image">
-            </div>
-        </section>
+      <section id="home">
+        <div class="content">
+          <div class="text-block">
+            <h1>BRIEF GAME DESCRIPTION</h1>
+            <br /><br />
+            <ul>
+              <li>Each player turns over a card in the order of play.</li>
+              <li>
+                Soon as the revealed cards show exactly 5 fruits of the same
+                sort, the first player to ring the bell wins all of the revealed
+                cards.
+              </li>
+              <li>
+                The aim of the game is to win the largest number of cards.
+              </li>
+            </ul>
+          </div>
+          <img
+            src="homepage/HalliGalli.png"
+            alt="Picture of Halli Galli Logo"
+          />
+        </div>
+      </section>
+      <section id="instructions">
+        <div class="content with-image">
+          <div class="button"><a href="#">Game Instruction</a></div>
+          <img src="homepage/Strawberry.gif" alt="Game Instruction Image" />
+        </div>
+      </section>
+      <section id="quiz">
+        <div class="content with-image">
+          <img src="homepage/Banana.gif" alt="Quiz Image" />
+          <div class="button"><a href="#">Quiz Yourself</a></div>
+        </div>
+      </section>
+      <section id="demo">
+        <div class="content with-image">
+          <div class="button"><a href="#">Demo Game</a></div>
+          <img src="homepage/Pinapple.gif" alt="Demo Game Image" />
+        </div>
+      </section>
     </main>
     <footer>
-        <p>Media Computation Group 1.4</p>
+      <p>Media Computation Group 1.4</p>
     </footer>
-</body>
-
+  </body>
 </html>
