--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -8,6 +8,16 @@
     <script src="quiz.js"></script>
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="../index.html">Halli Galli</a></li>
+          <li><a href="../instructions">Game Instructions</a></li>
+          <li><a href="../quiz/quiz.html">Quiz Yourself</a></li>
+          <li><a href="../demo/demo.html">Demo Game</a></li>
+        </ul>
+      </nav>
+    </header>
     <h1>Quiz!</h1>
     <h2>Test yourself with these questions...</h2>
     <ol>
