navbar + instruction update

--- a/index.html
+++ b/index.html
@@ -4,22 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halli Galli</title>
-    <link rel="stylesheet" href="homepage/styles.css" />
+    <link rel="stylesheet" href="../instruction/halligalli.css" />
   </head>
 
   <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="index.html">Halli Galli</a></li>
-          <li><a href="#instructions">Game Instructions</a></li>
-          <li><a href="quiz/quiz.html">Quiz Yourself</a></li>
-          <li><a href="demo/demo.html">Demo Game</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section id="home">
+    <nav class="navbar">
+      <ul>
+        <li>
+          <a href="../index.html">Halli Galli</a>
+        </li>
+
+        <li><a href="../instruction/halligalli.html">Game Instructions</a></li>
+        <li><a href="../quiz/quiz2.0.html">Quiz Yourself</a></li>
+        <li><a href="../demo/demo.html">Demo Game</a></li>
+      </ul>
+    </nav>
+    <main class="homepage-main">
+      <section class="homepage-content">
         <div class="content">
           <div class="text-block">
             <h1>BRIEF GAME DESCRIPTION</h1>
@@ -61,7 +62,7 @@
         </div>
       </section>
     </main>
-    <footer>
+    <footer id="footer-home">
       <p>Media Computation Group 1.4</p>
     </footer>
   </body>
