update font origin in head

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halli Galli</title>
     <link rel="stylesheet" href="../instruction/halligalli.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&family=Roboto+Slab:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -20,6 +31,13 @@
       </ul>
     </nav>
     <main class="homepage-main">
+      <div class="marquee">
+        <span>
+          Media Computation: Halli Galli. Media Computation: Halli Galli. Media
+          Computation: Halli Galli. Media Computation: Halli Galli. Media
+          Computation: Halli Galli.
+        </span>
+      </div>
       <section class="homepage-content">
         <div class="content">
           <div class="text-block">
