--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             </ul>
           </div>
           <img
-            src="homepage/HalliGalli.png"
+            src=""
             alt="Picture of Halli Galli Logo"
           />
         </div>
