--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&family=Roboto+Slab:wght@100..900&display=swap"
       rel="stylesheet"
     />
+    <script type="text/javascript" src="../index.js"></script>
   </head>
 
   <body>
@@ -38,6 +39,91 @@
           Computation: Halli Galli.
         </span>
       </div>
+      <div class="graphic-container">
+        <div class="graphic-container-inner">
+          <img
+            src="../img/apple.svg"
+            class="graphicShape"
+            data-value="-2"
+            alt=""
+          />
+          <img
+            src="../img/bowl.svg"
+            class="graphicShape"
+            data-value="6"
+            alt=""
+          />
+          <img
+            src="../img/grape.svg"
+            class="graphicShape"
+            data-value="4"
+            alt=""
+          />
+          <img
+            src="../img/ice1.svg"
+            class="graphicShape"
+            data-value="-6"
+            alt=""
+          />
+          <img
+            src="../img/ice2.svg"
+            class="graphicShape"
+            data-value="8"
+            alt=""
+          />
+          <img
+            src="../img/lemon.svg"
+            class="graphicShape"
+            data-value="-4"
+            alt=""
+          />
+          <img
+            src="../img/lip.svg"
+            class="graphicShape"
+            data-value="5"
+            alt=""
+          />
+  
+          <img
+            src="../img/orange.svg"
+            class="graphicShape"
+            data-value="-9"
+            alt=""
+          />
+          <img
+            src="../img/pear.svg"
+            class="graphicShape"
+            data-value="-5"
+            alt=""
+          />
+          <img
+            src="../img/sparkle.svg"
+            class="graphicShape"
+            data-value="6"
+            alt=""
+          />
+          <img
+            src="../img/sparkle2.svg"
+            class="graphicShape"
+            data-value="2"
+            alt=""
+          />
+          <img
+            src="../img/sparkle3.svg"
+            class="graphicShape"
+            data-value="-4"
+            alt=""
+          />
+          <img
+            src="../img/water.svg"
+            class="graphicShape"
+            data-value="3"
+            alt=""
+          />
+          
+        </div>
+      </div>
+  
       <section class="homepage-content">
         <div class="content">
           <div class="text-block">
