--- a/instruction/halligalli.html
+++ b/instruction/halligalli.html
@@ -36,9 +36,7 @@
     <main>
       <div class="marquee">
         <span>
-          Media Computation: Halli Galli. Media Computation: Halli Galli. Media
-          Computation: Halli Galli. Media Computation: Halli Galli. Media
-          Computation: Halli Galli.
+          Halli Galli: Instruction. Halli Galli: Instruction. Halli Galli: Instruction. Halli Galli: Instruction. 
         </span>
       </div>
       <div class="title">
@@ -50,7 +48,7 @@
       <div class="cardsouter">
         <div class="cards">
           <div class="card" style="--i: -4">
-            <img src="../cardimages/0.png" />
+            <img src="../img/0.png" />
           </div>
           <div class="card" style="--i: -3">2</div>
           <div class="card" style="--i: -2">3</div>
