--- a/instruction/halligalli.html
+++ b/instruction/halligalli.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halligalli</title>
-    <link rel="stylesheet" href="halligalli.css" />
+    <link rel="stylesheet" href="../halligalli.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
