--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halli Galli</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="Game-Arcade/../halligalli.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap"
@@ -43,13 +44,13 @@
         <div class="graphic-container-inner">
           <img
             src="../img/apple.svg"
-            class="graphicShape"
+            class="graphicShape apple"
             data-value="-2"
             alt=""
           />
           <img
             src="../img/bowl.svg"
-            class="graphicShape"
+            class="graphicShape bowl"
             data-value="6"
             alt=""
           />
@@ -73,7 +74,7 @@
           />
           <img
             src="../img/lemon.svg"
-            class="graphicShape"
+            class="graphicShape lemon"
             data-value="-4"
             alt=""
           />
@@ -83,7 +84,7 @@
             data-value="5"
             alt=""
           />
-  
+
           <img
             src="../img/orange.svg"
             class="graphicShape"
@@ -120,52 +121,44 @@
             data-value="3"
             alt=""
           />
-          
         </div>
       </div>
-  
-      <section class="homepage-content">
-        <div class="content">
-          <div class="text-block">
-            <h1>BRIEF GAME DESCRIPTION</h1>
-            <br /><br />
-            <ul>
-              <li>Each player turns over a card in the order of play.</li>
-              <li>
-                Soon as the revealed cards show exactly 5 fruits of the same
-                sort, the first player to ring the bell wins all of the revealed
-                cards.
-              </li>
-              <li>
-                The aim of the game is to win the largest number of cards.
-              </li>
-            </ul>
-          </div>
-          <img
-            src=""
-            alt="Picture of Halli Galli Logo"
-          />
-        </div>
-      </section>
-      <section id="instructions">
-        <div class="content with-image">
-          <div class="button"><a href="#">Game Instruction</a></div>
-          <img src="homepage/Strawberry.gif" alt="Game Instruction Image" />
-        </div>
-      </section>
-      <section id="quiz">
-        <div class="content with-image">
-          <img src="homepage/Banana.gif" alt="Quiz Image" />
-          <div class="button"><a href="#">Quiz Yourself</a></div>
-        </div>
-      </section>
-      <section id="demo">
-        <div class="content with-image">
-          <div class="button"><a href="#">Demo Game</a></div>
-          <img src="homepage/Pinapple.gif" alt="Demo Game Image" />
-        </div>
-      </section>
     </main>
+    <section class="homepage-content">
+      <div class="content">
+        <div class="text-block">
+          <h1>BRIEF GAME DESCRIPTION</h1>
+          <br /><br />
+          <ul>
+            <li>Each player turns over a card in the order of play.</li>
+            <li>
+              Soon as the revealed cards show exactly 5 fruits of the same sort,
+              the first player to ring the bell wins all of the revealed cards.
+            </li>
+            <li>The aim of the game is to win the largest number of cards.</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section id="instructions">
+      <div class="content with-image">
+        <div class="button"><a href="#">Game Instruction</a></div>
+        <img src="homepage/Strawberry.gif" alt="Game Instruction Image" />
+      </div>
+    </section>
+    <section id="quiz">
+      <div class="content with-image">
+        <img src="homepage/Banana.gif" alt="Quiz Image" />
+        <div class="button"><a href="#">Quiz Yourself</a></div>
+      </div>
+    </section>
+    <section id="demo">
+      <div class="content with-image">
+        <div class="button"><a href="#">Demo Game</a></div>
+        <img src="homepage/Pinapple.gif" alt="Demo Game Image" />
+      </div>
+    </section>
+
     <footer id="footer-home">
       <p>Media Computation Group 1.4</p>
     </footer>
