--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halli Galli</title>
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="reset.css"/>
     <link rel="stylesheet" href="Game-Arcade/../halligalli.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap"
@@ -121,6 +121,8 @@
             data-value="3"
             alt=""
           />
+
+          <img src="../img/fruitbowl.svg" style="width: 100%" />
         </div>
       </div>
     </main>
@@ -143,19 +145,19 @@
     <section id="instructions">
       <div class="content with-image">
         <div class="button"><a href="#">Game Instruction</a></div>
-        <img src="homepage/Strawberry.gif" alt="Game Instruction Image" />
+        <img src="" alt="Game Instruction Image" />
       </div>
     </section>
     <section id="quiz">
       <div class="content with-image">
-        <img src="homepage/Banana.gif" alt="Quiz Image" />
+        <img src="" alt="Quiz Image" />
         <div class="button"><a href="#">Quiz Yourself</a></div>
       </div>
     </section>
     <section id="demo">
       <div class="content with-image">
         <div class="button"><a href="#">Demo Game</a></div>
-        <img src="homepage/Pinapple.gif" alt="Demo Game Image" />
+        <img src="" alt="Demo Game Image" />
       </div>
     </section>
 
