--- a/home-page/HomePage.html
+++ b/home-page/HomePage.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <main class="homepage-main">
         <section id="home">
             <div class="content">
                 <div class="text-block">
@@ -58,7 +58,7 @@
     </footer>
     <div id="preloader"></div>
 
-    <script src="assets/js/script.js"></script>
+    <script src="assets/script.js"></script>
 </body>
 
 </html>
