--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&family=Roboto+Slab:wght@100..900&display=swap"
       rel="stylesheet"
     />
-    <script type="text/javascript" src="../index.js"></script>
+    <script type="text/javascript" src="index.js"></script>
   </head>
 
   <body>
@@ -126,43 +126,46 @@
         </div>
       </div>
     </main>
-    <section class="homepage-content">
-      <div class="content">
-        <div class="text-block">
-          <h1>BRIEF GAME DESCRIPTION</h1>
-          <br /><br />
-          <ul>
-            <li>Each player turns over a card in the order of play.</li>
-            <li>
-              Soon as the revealed cards show exactly 5 fruits of the same sort,
-              the first player to ring the bell wins all of the revealed cards.
-            </li>
-            <li>The aim of the game is to win the largest number of cards.</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <section id="instructions">
-      <div class="content with-image">
-        <div class="button"><a href="#">Game Instruction</a></div>
-        <img src="" alt="Game Instruction Image" />
-      </div>
-    </section>
-    <section id="quiz">
-      <div class="content with-image">
-        <img src="" alt="Quiz Image" />
-        <div class="button"><a href="#">Quiz Yourself</a></div>
-      </div>
-    </section>
-    <section id="demo">
-      <div class="content with-image">
-        <div class="button"><a href="#">Demo Game</a></div>
-        <img src="" alt="Demo Game Image" />
-      </div>
-    </section>
-
+    
+    <div class="homepage-main">
+        <section id="home">
+            <div class="content">
+                <div class="text-block">
+                    <h1 class="slide-up">BRIEF GAME DESCRIPTION</h1><br><br>
+                    <ul  class="slide-up">
+                        <li>Each player turns over a card in the order of play.</li>
+                        <li>Soon as the revealed cards show exactly 5 fruits of the same sort, the first player to ring
+                            the bell wins all of the revealed cards.</li>
+                        <li>The aim of the game is to win the largest number of cards.</li>
+                    </ul>
+                </div>
+                <img class="slide-left" src="assets/img/HalliGalli.png" alt="Picture of Halli Galli Logo">
+            </div>
+        </section>
+        <section class="section-slide-up" id="instructions">
+            <div class="content with-image">
+                <div class="button slide-up" ><a href="#">Game Instruction</a></div>
+                <img class="slide-left" src="assets/img/Strawberry.gif" alt="Game Instruction Image">
+            </div>
+        </section>
+        <section id="quiz">
+            <div class="content with-image">
+                <img src="assets/img/Banana.gif" class="slide-right" alt="Quiz Image">
+                <div class="button slide-up"><a href="#">Quiz Yourself</a></div>
+            </div>
+        </section>
+        <section id="demo">
+            <div class="content with-image">
+                <div class="button slide-up"><a href="#">Demo Game</a></div>
+                <img src="assets/img/Lemon.gif" class="slide-left" alt="Demo Game Image">
+            </div>
+        </section>
+    </div>
+    
     <footer id="footer-home">
       <p>Media Computation Group 1.4</p>
     </footer>
+    <div id="preloader"></div>
+    <script src="kangsan-home.js"></script>
   </body>
 </html>
