--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Halli Galli</title>
     <link rel="stylesheet" href="reset.css"/>
-    <link rel="stylesheet" href="Game-Arcade/../halligalli.css" />
+    <link rel="stylesheet" href="halligalli.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap"
       rel="stylesheet"
@@ -24,10 +24,10 @@
     <nav class="navbar">
       <ul>
         <li>
-          <a href="../index.html">Halli Galli</a>
+          <a href="../index.html">Halli Galli: Home</a>
         </li>
 
-        <li><a href="../instruction/halligalli.html">Game Instructions</a></li>
+        <li><a href="../instruction/instruction.html">Game Instructions</a></li>
         <li><a href="../quiz/quiz2.0.html">Quiz Yourself</a></li>
         <li><a href="../demo/demo.html">Demo Game</a></li>
       </ul>
