--- a/instruction/instruction.html
+++ b/instruction/instruction.html
@@ -25,7 +25,7 @@
     <nav class="navbar">
       <ul>
         <li>
-          <a href="../index.html">Halli Galli</a>
+          <a href="../index.html">Halli Galli: Home</a>
         </li>
 
         <li><a href="../instruction/halligalli.html">Game Instructions</a></li>
