refined css for instruction

--- a/instruction/instruction.html
+++ b/instruction/instruction.html
@@ -38,7 +38,7 @@
       <div class="marquee">
         <span>
           Halli Galli: Instruction. Halli Galli: Instruction. Halli Galli:
-          Instruction. Halli Galli: Instruction.
+          Instruction. Halli Galli: Instruction. Halli Galli: Instruction. 
         </span>
       </div>
 
