update quiz styling

--- a/quiz/quiz2.0.html
+++ b/quiz/quiz2.0.html
@@ -55,7 +55,7 @@
           Q1. There is a 4-strawberry card on the deck. To ring the bell how
           many strawberries should be on the card that will put down?
         </ol>
-        <input type="number" id="answer0" placeholder="Type number only" />
+        <input class="number" type="number" id="answer0" placeholder="Type number only" />
         <p id="response0"></p>
       </div>
 
