modified font source in head

--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -4,7 +4,15 @@
     <link rel="stylesheet" href="demo.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demo Halli Galli</title>
+    <title>Halli Galli Demo Game</title>
+    <link rel="stylesheet" href="/reset.css" />
+    <link rel="stylesheet" href="../halligalli.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -19,7 +27,12 @@
         </ul>
       </nav>
     </header>
-
+    <div class="marquee">
+      <span>
+        Halli Galli: Instruction. Halli Galli: Instruction. Halli Galli:
+        Instruction. Halli Galli: Instruction. Halli Galli: Instruction.
+      </span>
+    </div>
     <main>
       <!--Section for instruction of demo game-->
       <section class="section1">
@@ -33,10 +46,10 @@
 
         <h3>Demo Game Instructions</h3>
         <p>
-          1. To enjoy the game, please make sure your sound is on! 2. When
-          you press the <span id="buttons">Start</span> button, the card will
-          flip after 3 seconds, and the game will begin. 3. When the cards
-          satisfy the Halli Galli rules, simply press the 🛎️<span id="buttons"
+          1. To enjoy the game, please make sure your sound is on! 2. When you
+          press the <span id="buttons">Start</span> button, the card will flip
+          after 3 seconds, and the game will begin. 3. When the cards satisfy
+          the Halli Galli rules, simply press the 🛎️<span id="buttons"
             >bell image</span
           >
           in front of you. 4. When you have to ring the bell, you will earn 1
