--- a/instruction/instruction.html
+++ b/instruction/instruction.html
@@ -4,20 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Halligalli</title>
+    <title>Halligalli Game Instruction</title>
     <link rel="stylesheet" href="/reset.css" />
     <link rel="stylesheet" href="../halligalli.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&family=Roboto+Slab:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -38,7 +31,7 @@
       <div class="marquee">
         <span>
           Halli Galli: Instruction. Halli Galli: Instruction. Halli Galli:
-          Instruction. Halli Galli: Instruction. Halli Galli: Instruction. 
+          Instruction. Halli Galli: Instruction. Halli Galli: Instruction.
         </span>
       </div>
 
@@ -62,8 +55,6 @@
           <div class="card" style="--i: 4"><img src="../img/17.png" /></div>
         </div>
       </div>
-
-
 
       <div class="gamecontents">
         <div class="gamecontent__heading">
