--- a/quiz/quiz2.0.html
+++ b/quiz/quiz2.0.html
@@ -7,17 +7,13 @@
     <title>Quiz</title>
     <link rel="stylesheet" href="../reset.css" />
     <link rel="stylesheet" href="../halligalli.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Roboto+Slab:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&family=Roboto+Slab:wght@100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
+
     <script src="quiz2.0.js"></script>
   </head>
   <body>
@@ -55,7 +51,12 @@
           Q1. There is a 4-strawberry card on the deck. To ring the bell how
           many strawberries should be on the card that will put down?
         </ol>
-        <input class="number" type="number" id="answer0" placeholder="Type number only" />
+        <input
+          class="number"
+          type="number"
+          id="answer0"
+          placeholder="Type number only"
+        />
         <p id="response0"></p>
       </div>
 
