--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -29,8 +29,9 @@
     </header>
     <div class="marquee">
       <span>
-        Halli Galli: Instruction. Halli Galli: Instruction. Halli Galli:
-        Instruction. Halli Galli: Instruction. Halli Galli: Instruction.
+        Halli Galli: Demo Game. Halli Galli: Demo Game. Halli Galli: Demo Game.
+        Halli Galli: Demo Game. Halli Galli: Demo Game. Halli Galli: Demo Game.
+        Halli Galli: Demo Game.
       </span>
     </div>
     <main>
