--- a/quiz/quiz2.0.html
+++ b/quiz/quiz2.0.html
@@ -34,9 +34,9 @@
 
     <div class="marquee">
       <span>
-        Halli Galli: Quiz - Halli Galli: Quiz - Halli Galli: Quiz - Halli Galli:
-        Quiz - Halli Galli: Quiz - Halli Galli: Quiz - Halli Galli: Quiz - Halli
-        Galli: Quiz
+        Halli Galli: Quiz - Halli Galli: Quiz. Halli Galli: Quiz. Halli Galli:
+        Quiz. Halli Galli: Quiz. Halli Galli: Quiz. Halli Galli: Quiz. Halli
+        Galli: Quiz. 
       </span>
     </div>
 
