--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title>Halli Galli</title>
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="halligalli.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png" />
     <script type="text/javascript" src="index.js"></script>
   </head>
 
@@ -107,17 +110,18 @@
       </div>
     </div>
 
-
-
     <div class="homepage-main">
       <div class="hero-message">
         <h1 class="heading" class="hero-message-text">
-          Flip cards to reveal fruits. Spot five of a kind? Ring the bell first to win!
+          Flip cards to reveal fruits. Spot five of a kind? Ring the bell first
+          to win!
         </h1>
       </div>
       <section class="section-slide-up" id="instructions">
         <div class="content with-image">
-          <div class="button slide-up"><a href="../instruction/instruction.html">Game Instruction</a></div>
+          <div class="button slide-up">
+            <a href="../instruction/instruction.html">Game Instruction</a>
+          </div>
           <img
             class="slide-left"
             src="../img/Strawberry.gif"
@@ -127,17 +131,17 @@
       </section>
       <section id="quiz">
         <div class="content with-image">
-          <img
-            src="../img/Banana.gif"
-            class="slide-right"
-            alt="Quiz Image"
-          />
-          <div class="button slide-up"><a href="../quiz/quiz2.0.html">Quiz Yourself</a></div>
+          <img src="../img/Banana.gif" class="slide-right" alt="Quiz Image" />
+          <div class="button slide-up">
+            <a href="../quiz/quiz2.0.html">Quiz Yourself</a>
+          </div>
         </div>
       </section>
       <section id="demo">
         <div class="content with-image">
-          <div class="button slide-up"><a href="../demo/demo.html">Demo Game</a></div>
+          <div class="button slide-up">
+            <a href="../demo/demo.html">Demo Game</a>
+          </div>
           <img
             src="../img/Lemon.gif"
             class="slide-left"
