--- a/Demo/Demo.html
+++ b/Demo/Demo.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png">
   </head>
   <body>
     <header>
@@ -39,8 +40,8 @@
       <section class="section1">
         <h1>Demo Halli Galli</h1>
         <p>
-          Have you learned the rules of Halli Galli enough? If so, let's
-          practice in a Demo game! 🎮​ On this page, you can experience a demo
+          Have you mastered the rules of Halli Galli? If yes, let's
+          practice with a fun Demo Game! 🎮​ On this page, you can experience a demo
           of the Halli Galli game.
           <span id="text"> Shall we begin ​🚩​ </span>
         </p>
