--- a/instruction/instruction.html
+++ b/instruction/instruction.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&family=Inter:wght@100..900&family=Jaro:opsz@6..72&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/x-icon" href="../img/favicon.png" />
   </head>
   <body>
     <nav class="navbar">
