--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="../img/favicon.png" />
-    <script type="text/javascript" src="index.js"></script>
   </head>
 
   <body>
@@ -155,6 +154,6 @@
       <p>Media Computation Group 1.4</p>
     </footer>
     <div id="preloader"></div>
-    <script src="kangsan-home.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
